Add comment about managed config file.

--- a/graylog_collector_sidecar/files/collector_sidecar.yml
+++ b/graylog_collector_sidecar/files/collector_sidecar.yml
@@ -1,3 +1,4 @@
+# SALT VARIABLES - DO NOT EDIT
 {%- from "graylog_collector_sidecar/map.jinja" import agent with context -%}
 {%- set host = salt['grains.get']('host') %}
 server_url: {{ agent.api }}
