--- a/graylog_collector_sidecar/files/collector_sidecar.yml
+++ b/graylog_collector_sidecar/files/collector_sidecar.yml
@@ -1,7 +1,7 @@
 # SALT VARIABLES - DO NOT EDIT
-{%- from "graylog_collector_sidecar/map.jinja" import agent with context -%}
+{%- from "graylog_collector_sidecar/map.jinja" import sidecar with context -%}
 {%- set host = salt['grains.get']('host') %}
-server_url: {{ agent.api }}
+server_url: {{ sidecar.api }}
 update_interval: 10
 tls_skip_verify: false
 send_status: true
@@ -13,7 +13,7 @@ log_path: /var/log/graylog/collector-sidecar
 log_rotation_time: 86400
 log_max_age: 604800
 tags:
-    {%- for tag in agent.tags %}
+    {%- for tag in sidecar.tags %}
     - {{ tag }}
     {%- endfor %}
 backends:
