--- a/graylog_collector_sidecar/meta/sphinx.yml
+++ b/graylog_collector_sidecar/meta/sphinx.yml
@@ -1,4 +1,4 @@
-{%- from "graylog-collector-sidecar/map.jinja" import agent with context %}
+{%- from "graylog-collector-sidecar/map.jinja" import sidecar with context %}
 # Fill in documentation details
 doc:
   name: graylog-collector-sidecar
