--- a/graylog_collector_sidecar/files/collector_sidecar.yml
+++ b/graylog_collector_sidecar/files/collector_sidecar.yml
@@ -12,9 +12,9 @@ cache_path: /var/cache/graylog/collector-sidecar
 log_path: /var/log/graylog/collector-sidecar
 log_rotation_time: 86400
 log_max_age: 604800
-{%- if sidecar.tags %}
+{%- if 'tags' in sidecar %}
 tags:
-{%- for tag in sidecar.tags %}
+{%- for tag in sidecar['tags'] %}
   - {{ tag }}
 {%- endfor %}
 {%- endif %}
