--- a/graylog_sidecar/files/sidecar.yml
+++ b/graylog_sidecar/files/sidecar.yml
@@ -2,3 +2,7 @@
 {%- from "graylog_sidecar/map.jinja" import sidecar with context %}
 server_url: {{ sidecar.api }}
 server_api_token: {{ sidecar.token }}
+tags:
+{% for tag in salt['pillar.get']('graylog:sidecar:tags', []) %}
+  - {{ tag }}
+{% endfor %}
